safemlx-sys/src/mlx-c/mlx/c/array.h

/**
 * \defgroup mlx_array Array
 * MLX N-dimensional array object.
 */
/**@{*/

/**
 * A N-dimensional array object.
 */
typedef struct mlx_array_ {
  void* ctx;
  // Null for ordinary new/delete. Prepared inputs and prepaid handle clones use
  // this closed arena owner. Shallow C copies still obey unique-handle custody.
  void* prepared_owner;
} mlx_array;