safemlx-sys/src/bindings.rs

extern "C" {
    pub fn mlx_right_shift(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_roll_axis(
        res: *mut mlx_array,
        a: mlx_array,
        shift: *const ::std::os::raw::c_int,
        shift_num: usize,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_roll_axes(
        res: *mut mlx_array,
        a: mlx_array,
        shift: *const ::std::os::raw::c_int,
        shift_num: usize,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_roll(
        res: *mut mlx_array,
        a: mlx_array,
        shift: *const ::std::os::raw::c_int,
        shift_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_round(
        res: *mut mlx_array,
        a: mlx_array,
        decimals: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_rsqrt(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_vector_array,
        updates: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_single(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        updates: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_add(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_vector_array,
        updates: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_add_single(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        updates: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_add_axis(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        values: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_max(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_vector_array,
        updates: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_max_single(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        updates: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_min(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_vector_array,
        updates: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_min_single(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        updates: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_prod(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_vector_array,
        updates: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_scatter_prod_single(
        res: *mut mlx_array,
        a: mlx_array,
        indices: mlx_array,
        updates: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_segmented_mm(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        segments: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sigmoid(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sign(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sin(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sinh(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice(
        res: *mut mlx_array,
        a: mlx_array,
        start: *const ::std::os::raw::c_int,
        start_num: usize,
        stop: *const ::std::os::raw::c_int,
        stop_num: usize,
        strides: *const ::std::os::raw::c_int,
        strides_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice_dynamic(
        res: *mut mlx_array,
        a: mlx_array,
        start: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        slice_size: *const ::std::os::raw::c_int,
        slice_size_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice_update(
        res: *mut mlx_array,
        src: mlx_array,
        update: mlx_array,
        start: *const ::std::os::raw::c_int,
        start_num: usize,
        stop: *const ::std::os::raw::c_int,
        stop_num: usize,
        strides: *const ::std::os::raw::c_int,
        strides_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice_update_dynamic(
        res: *mut mlx_array,
        src: mlx_array,
        update: mlx_array,
        start: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice_update_add(
        res: *mut mlx_array,
        src: mlx_array,
        update: mlx_array,
        start: *const ::std::os::raw::c_int,
        start_num: usize,
        stop: *const ::std::os::raw::c_int,
        stop_num: usize,
        strides: *const ::std::os::raw::c_int,
        strides_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice_update_max(
        res: *mut mlx_array,
        src: mlx_array,
        update: mlx_array,
        start: *const ::std::os::raw::c_int,
        start_num: usize,
        stop: *const ::std::os::raw::c_int,
        stop_num: usize,
        strides: *const ::std::os::raw::c_int,
        strides_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice_update_min(
        res: *mut mlx_array,
        src: mlx_array,
        update: mlx_array,
        start: *const ::std::os::raw::c_int,
        start_num: usize,
        stop: *const ::std::os::raw::c_int,
        stop_num: usize,
        strides: *const ::std::os::raw::c_int,
        strides_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_slice_update_prod(
        res: *mut mlx_array,
        src: mlx_array,
        update: mlx_array,
        start: *const ::std::os::raw::c_int,
        start_num: usize,
        stop: *const ::std::os::raw::c_int,
        stop_num: usize,
        strides: *const ::std::os::raw::c_int,
        strides_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_softmax_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        precise: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_softmax_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        precise: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_softmax(
        res: *mut mlx_array,
        a: mlx_array,
        precise: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sort_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sort(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_split(
        res: *mut mlx_vector_array,
        a: mlx_array,
        num_splits: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_split_sections(
        res: *mut mlx_vector_array,
        a: mlx_array,
        indices: *const ::std::os::raw::c_int,
        indices_num: usize,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sqrt(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_square(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_squeeze_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_squeeze_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_squeeze(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_stack_axis(
        res: *mut mlx_array,
        arrays: mlx_vector_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_stack(
        res: *mut mlx_array,
        arrays: mlx_vector_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_std_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        ddof: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_std_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        ddof: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_std(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        ddof: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_stop_gradient(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_subtract(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sum_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sum_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_sum(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
